# medcoupling-wheels

./: METADATA.in  README.rst  build-wheels-linux.sh  build-wheels-windows-legacy.bat  build-wheels-windows.bat  build_locally.sh  medcoupling913-numpy2.patch  pyproject.toml  write_distinfo.py
.github/workflows/: stable.yml
docker/manylinux/: Dockerfile
