[project]
name = "medcoupling"
version = "9.12.0"
authors = [
  {name = "EDF R&D", email = "eric.fayolle@edf.fr"},
]
keywords = ["salome", "mesh", "numerical", "simulation"]
license = { text = "LGPL" }
description = "Powerful library to manipulate meshes and fields"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]
requires-python = ">=3.8"
dependencies = ["numpy"]

[project.urls]
Homepage = "https://www.salome-platform.org/downloads"
Repository = "https://git.salome-platform.org/gitweb"

[build-system]
requires = ["setuptools>=60", ]

[tool.setuptools.packages.find]
where = ["build_dir"]

[tool.setuptools.package-data]
"*" = ["*"]

